Comentarios y algunas sugerencias de cambios en game.backend.move