@@ -13,6 +13,8 @@ import java.awt.Point;
 public enum Figure {
 	
 	// todas las posibles figuras
+	// Podriamos simplificar t.odo esto con el enum de Checkpoints (casi seguro)
+	// Ejemplo: F6(new Checkpoint[](LL, L, R, RR), Bomb.class, false)
 	F6(new Point[]{ new Point(0,-2), new Point(0,-1), new Point(0,1), new Point(0,2)}, 240, Bomb.class, false),
 	F15(new Point[]{ new Point(-2,0), new Point(-1,0), new Point(1,0), new Point(2,0)}, 15, Bomb.class, false),	
 	F4(new Point[]{ new Point(0,-1), new Point(0,1), new Point(0,2)}, 112,  VerticalStripedCandy.class),
@@ -84,7 +86,7 @@ public enum Figure {
 	public Element generateReplacement(CandyColor color) {
 		try {
 			Element e;
-			e = (Element) replacementClass.newInstance();
+			e = (Element) replacementClass.getDeclaredConstructor().newInstance();
 			if (isCandyRepl) {
 				((Candy)e).setColor(color);
 			} 
